[package]
name = "rottnest"
version = "1.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rottnest"
crate-type = ["cdylib"]

[features]
default = [] #['py']
py = ["dep:pyo3", "pyarrow", "dep:pyo3-log"]
pyarrow = ["arrow/pyarrow"]

[dependencies]
pyo3 = { version = "0.20.0", features = [
    "extension-module",
    "abi3",
    "abi3-py38",
], optional = true }
pyo3-log = { version = "0.9.0", optional = true }
arrow = { version = "50.0.0", default-features = false }
tokenizers = {version = "0.15.2", features = ["http"]}
whatlang = "0.16.4"
opendal = "0"
zstd = "0.13.0" # Check for the latest version of zstd crate
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3" # For serialization and deserialization
regex = "1.5"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
lazy_static = "1"
bytes = "1"
thiserror = "1"
log = "0.4"

arrow-array = "50.0.0"
parquet = { version = "50.0.0", features = [
    "arrow",
    "async",
    "experimental",
    "test_common",
] }
async-trait = "0.1.77"
arrow-schema = "50.0.0"
snap = { version = "1.0", default-features = false, optional = true }
brotli = { version = "3.3", default-features = false, features = [
    "std",
], optional = true }
flate2 = { version = "1.0", default-features = true, features = [
    "rust_backend",
], optional = true }
lz4_flex = { version = "0.11", default-features = false, features = [
    "std",
    "frame",
], optional = true }
thrift = { version = "0.17.0" }
itertools = "0.12.1"

tokio-stream = "0.1.14"
futures = "0.3"
rand = "0.8.5"
libdivsufsort-rs = "0.1.2"
serde_json = "1.0"

[profile.release]
lto = true
bit-vec = "0.6.3"
clap = { version = "4.4.18", features = ["derive"] }
