[package]
name = "rottnest"
version = "1.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rottnest"
crate-type = ["cdylib"]

[features]
default = []                                 #['py']
py = ["dep:pyo3", "pyarrow", "dep:pyo3-log"]
pyarrow = ["arrow/pyarrow"]


[dependencies]
chrono = "0.4.38"
pyo3 = { version = "0.21", features = [
    "extension-module",
    "abi3",
    "abi3-py38",
], optional = true }
pyo3-log = { version = "0.10", optional = true }
arrow = { version = "52.0.0", default-features = false }
tokenizers = { version = "0.19", features = ["http"] }
whatlang = "0.16.4"

byteorder = "1.4"
polars = { version = "0.40", features = ["parquet"] }
polars-lazy = { version = "0.40", features = ["parquet"] }

zstd = "0.13.0" # Check for the latest version of zstd crate
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3" # For serialization and deserialization
regex = "1.5"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
lazy_static = "1"
bytes = "1"
thiserror = "1"
log = "0.4"

arrow-array = "52.0.0"
arrow-select = "52.0.0"
parquet = { version = "52.0.0", features = [
    "arrow",
    "async",
    "experimental",
    "test_common",
] }
async-trait = "0.1.77"
arrow-schema = "52.0.0"
snap = { version = "1.0", default-features = false, optional = true }
brotli = { version = "3.3", default-features = false, features = [
    "std",
], optional = true }
flate2 = { version = "1.0", default-features = true, features = [
    "rust_backend",
], optional = true }
lz4_flex = { version = "0.11", default-features = false, features = [
    "std",
    "frame",
], optional = true }
thrift = { version = "0.17.0" }
itertools = "0.13"
bit-vec = "0.6"
bitvec = { version = "1.0.1", features = ["serde"] }
rayon = "1.9.0"
tokio-stream = "0.1.14"
futures = "0.3"
rand = "0.8.5"
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
async-recursion = "1.0.5"
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1.23.0" }
bitvector = "0.1.5"
ndarray = { version = "0.15.6", features = ["rayon", "serde"] }
numpy = "0.21.0"
num-traits = "0.2.18"
ordered-float = "4.2.0"
reqwest = "0.12.4"
redis = {version = "0", features = ["aio", "tokio-comp"] }
divsufsort = "2.0.0"
[profile.release]
lto = false
bit-vec = "0.6.3"
clap = { version = "4.4.18", features = ["derive"] }
