[build-system]
requires = ["maturin>=1.3,<2.0"]
build-backend = "maturin"

[project]
name = "rottnest"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = ["pyarrow", "polars", "tqdm", "boto3"]

[tool.maturin]
python-source = "python"
features = ["pyo3/extension-module"]

# Defining optional dependencies for feature flags
[project.optional-dependencies]
bm25 = ["duckdb"]
